# wakaama

./: .clang-format  CMakeLists.txt  README.md  wakaama.cmake
.github/workflows/: build_and_test.yaml  codechecker.yaml  rust-wrapper.yaml
coap/: block.c  message_dedup.c  message_dedup.h  transaction.c
coap/er-coap-13/: er-coap-13.c  er-coap-13.h
core/: block.c  bootstrap.c  discover.c  internals.h  liblwm2m.c  liblwm2m.h  list.c  logging.h  management.c  object_registry.c  objects.c  observe.c  packet.c  packet.h  registration.c  reporting.c  transaction.c  uri.c  utils.c  utils.h
core/er-coap-13/: er-coap-13.c
data/: cbor.c  data.c  json.c  senml_cbor.c  senml_json.c  tlv.c
doc/sphinx/: conf.py  index.rst
event_loop/posix/: CMakeLists.txt  event_loop.c
event_loop/posix/include/posix/: event_loop.h
examples/bootstrap_server/: bootstrap_info.c  bootstrap_server.c
examples/client/: lwm2mclient.c  object_device.c  object_location.c  object_test.c  system_api.c  test_object.c
examples/client/common/: lwm2mclient.c
examples/lightclient/: lightclient.c  object_device.c  object_security.c  object_server.c
examples/server/: CMakeLists.txt  lwm2mserver.c
examples/shared/: commandline.c  commandline.h  connection.c  connection.h  dtlsconnection.c  platform.c
include/: liblwm2m.h
tests/: CMakeLists.txt  block1tests.c  block2tests.c  cbor_tests.c  coap_block1tests.c  coap_message_deduplication.c  convert_numbers_test.c  core_registration_tests.c  er_coap_coap_parse_message.c  list_tests.c  lwm2m_version.c  lwm2m_version.h  registration_tests.c  registry_tests.c  senml_json_tests.c  tests.h  tlvtests.c  unittests.c  uritests.c
tests/basic/: convert_numbers_test.c  list_tests.c  uritests.c
tests/coap/: block1tests.c  block2tests.c  er_coap_coap_parse_message.c
tests/data/: cbor_tests.c  senml_cbor_tests.c  senml_json_tests.c  tlv_json_lwm2m_data_test.c  tlvtests.c
tests/framework/: tests.h
tests/fuzzing/: CMakeLists.txt  fuz_coap_parse_message.c
tests/fuzzing/registration_handleRequest/: CMakeLists.txt
tests/helper/: connection.c  connection.h
tests/integration/: test_registration_interface.py
tests/leshan/: CMakeLists.txt  run_leshan_client_tests_template.txt
tests/leshan/leshan_test_client/: Californium.properties  build.gradle  settings.gradle
tests/leshan/leshan_test_client/src/test/java/org/eclipse/wakaamatests/: RegistrationTest.java
tests/leshan/wakaama_test_server/: CMakeLists.txt  wakaama_test_server.c
tests/server/: registration_tests.c
tests_cbor/: CMakeLists.txt  encode_cbor.c  tests.h  unittests.c
tools/ci/: run_ci.sh
tools/code_checker/: reports.baseline
tools/lwm2m_object_registry/: create_objects.py
tools/multi-arch/: Dockerfile  run_docker-s390.sh
transport/tinydtls/: connection.c
transport/tinydtls/include/tinydtls/: connection.h
transport/udp/: connection.c
transport/udp/include/udp/: connection.h
wakaama-rs/: Cargo.toml  build.rs
wakaama-rs/src/: lib.rs
